[package]
authors = [
  "Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>",
  "Florent Delannoy <florent.delannoy@babylonhealth.com>",
  "Laurent Godet <laurent.godet@babylonhealth.com>"
]
name = "shipcat"
readme = "README.md"
version = "0.40.0"

[[bin]]
doc = false
name = "shipcat"
path = "src/main.rs"

[dependencies]
clap = "2.31.2"
error-chain = "0.11.0"
hyper = "0.11.25"
log = "0.4.1"
loggerv = "0.7.1"
openssl-probe = "0.1.2"
regex = "0.2.10"
reqwest = "0.8.5"
serde = "1.0.37"
serde_derive = "1.0.37"
serde_json = "1.0.13"
serde_yaml = "0.7.3"
slack-hook = { git = "https://github.com/clux/rust-slack" }
#slack-hook = { path = "../rust-slack" }
jenkins_api = "0.4.2"
tera = "0.11.7"
walkdir = "2.1.4"
threadpool = "1.7.1"
chrono = "0.4.1"
semver = { version = "0.9.0", features = ["serde"] }

[dependencies.petgraph]
features = ["serde-1"]
version = "0.4.11"

[lib]
name = "shipcat"
path = "src/lib.rs"

[profile.release]
debug = true
