[package]
authors = [
  "Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>",
  "Florent Delannoy <florent.delannoy@babylonhealth.com>",
  "Jeremie Vallee <jeremie.vallee@babylonhealth.com>",
  "Laurent Godet <laurent.godet@babylonhealth.com>",
  "Guy Leaver <guy.leaver@babylonhealth.com>"
]
name = "shipcat"
readme = "README.md"
version = "0.63.1"

[[bin]]
doc = false
name = "shipcat"
path = "src/main.rs"

[dependencies]
clap = "2.31.2"
error-chain = "0.12.0"
log = "0.4.5"
loggerv = "0.7.1"
openssl-probe = "0.1.2"
regex = "1.0.5"
reqwest = "0.9.2"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
serde_yaml = "0.8.5"
slack-hook = { git = "https://github.com/clux/rust-slack" }
jenkins_api = "0.5.1"
tera = "0.11.16"
walkdir = "2.1.4"
threadpool = "1.7.1"
chrono = { version = "0.4.6", features = ["serde"] }
semver = { version = "0.9.0", features = ["serde"] }
base64 = "0.9.3"
dirs = "1.0.3"
libc = "0.2.43"

[dependencies.petgraph]
features = ["serde-1"]
version = "0.4.13"

[lib]
name = "shipcat"
path = "src/lib.rs"

[profile.release]
debug = true
