[package]
name = "raftcat"
version = "0.85.0"
authors = ["Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>"]
edition = "2018"

[[bin]]
doc = false
name = "raftcat"
path = "src/main.rs"

[lib]
name = "raftcat"
path = "src/lib.rs"


[dependencies]
shipcat_definitions = { path = "../shipcat_definitions", features = ["crd"] }
kubernetes = { git = "https://github.com/clux/kubernetes-rust", rev = "8cb42b0eadf230ef519335fc071f74f187a11fae" }
#kubernetes = { path = "../../kubernetes-rust" }
serde_json = "1.0.32"
serde_yaml = "0.8.5"
serde = "1.0.80"
serde_derive = "1.0.80"
url = "1.7.2"
http = "0.1.13"
failure = "0.1.3"
actix-web = "0.7.13"
env_logger = "0.5.13"
actix = "0.7.6"
log = "0.4.6"
sentry = "0.12.0"
sentry-actix = "0.12.0"
tera = "0.11.20"
chrono = "0.4.6"
reqwest = "0.9.4"
semver = { version = "0.9.0", features = ["serde"] }
