[package]
name = "raftcat"
version = "0.106.1"
authors = ["Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>"]
edition = "2018"

[[bin]]
doc = false
name = "raftcat"
path = "src/main.rs"

[lib]
name = "raftcat"
path = "src/lib.rs"

[dependencies]
shipcat_definitions = { path = "../shipcat_definitions", features = ["crd"] }
#kube = "0.2.0"
#kube = { path = "../../kube-rs" }
kube = { git = "https://github.com/clux/kube-rs", rev = "14a851d115ed8ea8ddeeb46398450d25862e3c11" }
serde_json = "1.0.32"
serde_yaml = "0.8.5"
serde = "1.0.80"
serde_derive = "1.0.80"
prometheus = "0.4"
url = "1.7.2"
http = "0.1.13"
failure = "0.1.3"
actix-web = "0.7.13"
env_logger = "0.6.1"
actix = "0.7.6"
log = "0.4.6"
sentry = "0.12.0"
sentry-actix = "0.12.0"
tera = "0.11.20"
chrono = "0.4.6"
reqwest = "0.9.4"
semver = { version = "0.9.0", features = ["serde"] }
