[package]
name = "raftcat"
version = "0.159.3"
authors = ["Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>"]
edition = "2018"

[[bin]]
doc = false
name = "raftcat"
path = "src/main.rs"

[lib]
name = "raftcat"
path = "src/lib.rs"

[build-dependencies]
protoc-rust = "2.0"

[features]
default = ["with-serde"]
with-serde = []

[dependencies]
shipcat_definitions = { path = "../shipcat_definitions" }
kube = { version = "0.30.0" }
serde_json = "1.0.32"
serde_yaml = "0.8.9"
serde = "1.0.92"
serde_derive = "1.0.92"
url = "2.1.1"
http = "0.1.13"
failure = "0.1.5"
env_logger = "0.7.1"
base64 = "0.13.0"
actix-web = { version = "2.0.0" }
actix-rt = "1.0.0"
actix-files = "0.2.1"
log = "0.4.6"
tera = "0.11.20"
chrono = "0.4.6"
reqwest = { version = "0.10.2" }
semver = { version = "0.9.0", features = ["serde"] }
tokio = { version = "0.2.11", features = ["full"] }
protobuf = { version = "2.16.2", features = ["with-serde"] }
