[package]
authors = [
  "Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>",
  "Florent Delannoy <florent.delannoy@babylonhealth.com>",
  "Jeremie Vallee <jeremie.vallee@babylonhealth.com>",
  "Laurent Godet <laurent.godet@babylonhealth.com>",
  "Guy Leaver <guy.leaver@babylonhealth.com>",
  "Jay Anslow <jay.anslow@babylonhealth.com>",
  "Jose Alban <jose.alban@babylonhealth.com>",
  "Rhys <rhys.stansfield@babylonhealth.com>",
]
name = "shipcat"
description = "Deploy right meow."
readme = "README.md"
version = "0.134.1"
categories = ["command-line-utilities"]
keywords = ["kubernetes", "helm", "deployment", "standardisation", "validation"]
license-file = "LICENSE"
homepage = "https://github.com/babylonhealth/shipcat"
edition = "2018"

[[bin]]
doc = false
name = "shipcat"
path = "src/main.rs"

[dependencies]
shipcat_definitions = { path = "../shipcat_definitions", features = ["filesystem"] }
shipcat_filebacked = { path = "../shipcat_filebacked" }
clap = "2.33.0"
error-chain = "0.12.1"
log = "0.4.5"
loggerv = "0.7.1"
kube = "0.16.1"
openssl-probe = "0.1.2"
regex = "1.0.5"
reqwest = "0.9.2"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.32"
serde_yaml = "0.8.9"
slack-hook = "0.8.0"
threadpool = "1.7.1"
chrono = { version = "0.4.6", features = ["serde"] }
semver = { version = "0.9.0", features = ["serde"] }
dirs = "1.0.3"
libc = "0.2.43"
url_serde = "0.2.0"
url = "1.7.2"
rayon = "1.1.0"
which = "3.0.0"
self_update = "0.7.0"

[dependencies.petgraph]
features = ["serde-1"]
version = "0.4.13"

[dev-dependencies]
mockito = "0.14.0"

[lib]
name = "shipcat"
path = "src/lib.rs"
