[package]
authors = [
  "Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>",
  "Florent Delannoy <florent.delannoy@babylonhealth.com>",
  "Jeremie Vallee <jeremie.vallee@babylonhealth.com>",
  "Laurent Godet <laurent.godet@babylonhealth.com>",
  "Guy Leaver <guy.leaver@babylonhealth.com>",
  "Jay Anslow <jay.anslow@babylonhealth.com>",
  "Jose Alban <jose.alban@babylonhealth.com>",
  "Rhys <rhys.stansfield@babylonhealth.com>",
]
name = "shipcat"
description = "Deploy right meow."
readme = "README.md"
version = "0.146.0"
categories = ["command-line-utilities"]
keywords = ["kubernetes", "helm", "deployment", "standardisation", "validation"]
license-file = "LICENSE"
homepage = "https://github.com/babylonhealth/shipcat"
edition = "2018"

[[bin]]
doc = false
name = "shipcat"
path = "src/main.rs"

[dependencies]
shipcat_definitions = { path = "../shipcat_definitions", features = ["filesystem"] }
shipcat_filebacked = { path = "../shipcat_filebacked" }
clap = "2.33.0"
error-chain = "0.12.1"
log = "0.4.5"
loggerv = "0.7.1"
kube = "0.25.0"
openssl-probe = "0.1.2"
regex = "1.3.4"
reqwest = "0.10.1"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.32"
serde_yaml = "0.8.9"
k8s-openapi = { version = "0.7.1", features = ["v1_13"], default-features = false }
slack-hook2 = { version = "0.9.0" }
chrono = { version = "0.4.6", features = ["serde"] }
semver = { version = "0.9.0", features = ["serde"] }
dirs = "2.0.2"
libc = "0.2.66"
url = { version = "2.1.1", features = ["serde"] }
which = "3.1.0"
size_format = "1.0.2"
generic-array = "0.12"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.4"
tempdir = { version = "0.3.7", optional = true }
indicatif = { version = "0.14.0", optional = true }
tar = { version = "0.4.26", optional = true }
flate2 = { version = "1.0.13", optional = true }

[features]
default = ["self-upgrade"]
self-upgrade = ["indicatif", "flate2", "tar", "tempdir"]

[dependencies.petgraph]
features = ["serde-1"]
version = "0.5.0"

[dev-dependencies]
mockito = "0.23.1"

[lib]
name = "shipcat"
path = "src/lib.rs"
