[package]
authors = [
  "Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>",
  "Florent Delannoy <florent.delannoy@babylonhealth.com>",
  "Jeremie Vallee <jeremie.vallee@babylonhealth.com>",
  "Laurent Godet <laurent.godet@babylonhealth.com>",
  "Guy Leaver <guy.leaver@babylonhealth.com>",
  "Jay Anslow <jay.anslow@babylonhealth.com>",
  "Jose Alban <jose.alban@babylonhealth.com>",
  "Rhys <rhys.stansfield@babylonhealth.com>",
]
name = "shipcat"
description = "Deploy right meow."
readme = "README.md"
version = "0.159.3"
categories = ["command-line-utilities"]
keywords = ["kubernetes", "helm", "deployment", "standardisation", "validation"]
license-file = "LICENSE"
homepage = "https://github.com/babylonhealth/shipcat"
edition = "2018"

[[bin]]
doc = false
name = "shipcat"
path = "src/main.rs"

[dependencies]
shipcat_definitions = { path = "../shipcat_definitions", features = ["filesystem"] }
shipcat_filebacked = { path = "../shipcat_filebacked" }
clap = "2.33.0"
error-chain = "0.12.2"
log = "0.4.5"
loggerv = "0.7.1"
kube = { version = "0.30.0", features=["rustls-tls"], default-features = false }
#kube = { path = "../../../repos/kube-rs/kube", features=["rustls-tls"], default-features = false }
regex = "1.3.4"
reqwest = { version = "0.10.2", features=["rustls-tls"], default-features = false }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8.13"
k8s-openapi = { version = "0.7.1", features = ["v1_14"], default-features = false }
slack-hook2 = { version = "0.10.0", features = ["rustls-tls"], default-features = false }
chrono = { version = "0.4.6", features = ["serde"] }
semver = { version = "0.9.0", features = ["serde"] }
dirs = "2.0.2"
libc = "0.2.66"
url = { version = "2.1.1", features = ["serde"] }
which = "3.1.0"
size_format = "1.0.2"
generic-array = "0.12"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.4"
indicatif = { version = "0.14.0", optional = true }
tar = { version = "0.4.26", optional = true }
flate2 = { version = "1.0.13", optional = true }
futures-timer = "3.0.2"

[dependencies.petgraph]
features = ["serde-1"]
version = "0.5.0"

[features]
default = ["self-upgrade"]
self-upgrade = ["indicatif", "flate2", "tar"]

[dev-dependencies]
mockito = "0.23.3"

[lib]
name = "shipcat"
path = "src/lib.rs"
