[package]
authors = [
  "Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>",
  "Florent Delannoy <florent.delannoy@babylonhealth.com>",
  "Jeremie Vallee <jeremie.vallee@babylonhealth.com>",
  "Laurent Godet <laurent.godet@babylonhealth.com>",
  "Guy Leaver <guy.leaver@babylonhealth.com>"
]
name = "shipcat_definitions"
description = "Definition for Manifest and Config for shipcat"
readme = "README.md"
version = "0.70.0"
categories = ["configuration"]
keywords = ["kubernetes", "helm", "deployment", "standardisation", "validation"]
license-file = "LICENSE"
homepage = "https://github.com/Babylonpartners/shipcat"

[lib]
name = "shipcat_definitions"
path = "src/lib.rs"

[dependencies]
log = "0.4.5"
regex = "1.0.5"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_yaml = "0.8.5"
tera = "0.11.16"
semver = { version = "0.9.0", features = ["serde"] }
base64 = "0.9.3"
error-chain = "0.12.0"
reqwest = "0.9.4"
serde_json = "1.0.32"
dirs = { version = "1.0.4", optional = true }
walkdir = { version = "2.2.5", optional = true }

[features]
default = []
filesystem = ["walkdir", "dirs"]
crd = []
