[package]
authors = [
  "Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>",
  "Florent Delannoy <florent.delannoy@babylonhealth.com>",
  "Jeremie Vallee <jeremie.vallee@babylonhealth.com>",
  "Laurent Godet <laurent.godet@babylonhealth.com>",
  "Guy Leaver <guy.leaver@babylonhealth.com>",
  "Jose Alban <jose.alban@babylonhealth.com>",
  "Nabil Andaloussi <nabil.andaloussi@babylonhealth.com>"
]
name = "shipcat_definitions"
description = "Definition for Manifest and Config for shipcat"
readme = "README.md"
version = "0.159.4"
categories = ["configuration"]
keywords = ["kubernetes", "helm", "deployment", "standardisation", "validation"]
license-file = "LICENSE"
homepage = "https://github.com/babylonhealth/shipcat"
edition = "2018"

[lib]
name = "shipcat_definitions"
path = "src/lib.rs"

[dependencies]
log = "0.4.5"
regex = "1.0.5"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_yaml = "0.8.5"
serde_regex = "0.4.0"
tera = "0.11.16"
chrono = { version = "0.4.6", features = ["serde"] }
semver = { version = "0.9.0", features = ["serde"] }
base64 = "0.9.3"
error-chain = "0.12.2"
reqwest = { version = "0.10.2", features = ["rustls-tls"], default-features = false }
kube-derive = "0.30.0"
#kube-derive = { path = "../../../repos/kube-rs/kube-derive" }
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_14"] }
serde_json = "1.0.32"
dirs = { version = "2.0.2", optional = true }
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "0.8.1", features = ["v4"] }
maplit = "1.0.1"
tokio = { version = "0.2.11", features = ["full"] }
Inflector = "0.11.4"
prometheus-parser = "0.4.0"

[features]
default = []
filesystem = ["dirs"]
